# patterns

./: CMakeLists.txt  gui_helpers.c  gui_helpers.h  main.c  readme.md  realloc_test.c  utils.c  utils.h
AmigaCMakeCrossToolchains/: README.md  m68k-amigaos-gcc10.cmake  m68k-amigaos.cmake  vbcc-aos68k.cmake
MUI/: Developer.info
MUI/Developer/: Autodocs.info  C.info  Docs.info  ExtClasses.info  FD.info  ReadMe  ReadMe.info
MUI/Developer/C/: DLib.info  Examples.info  Include.info  Manx.info  ReadMe  ReadMe.info
MUI/Developer/C/DLib/: ClassNames.c  DMakeFile  DMakeFile.info  MakeObj.c  ReadMe  ReadMe.info  Request.c  allocaslreq.c  aslreq.c  muil.lib  muilr.lib  muis.lib  muisr.lib  newobj.c
MUI/Developer/C/Examples/: AppWindow.c  Balancing.c  BoopsiDoor.c  Class1.c  Class2.c  Class3.c  DragnDrop.c  EnvBrowser.c  InputHandler.c  Layout.c  MUI-Demo.c  Menus.c  Pages.c  Popup.c  ReadMe  ReadMe.info  SMakeFile  SMakeFile.info  ShowHide.c  Slidorama.c  Subtask.c  Virtual.c  WbMan.c  brush2c.c  psi.c  psi.h  psi.lh  psi_colors.brush  psi_freqs.brush  psi_screencf.mbr  psi_screencn.mbr  psi_screenof.mbr  psi_screenon.mbr  psi_sizes.brush
MUI/Developer/C/Include/inline/: muimaster.h
MUI/Developer/C/Include/pragma/: muimaster_lib.h
MUI/Developer/C/Include/proto/: muimaster.h
MUI/Developer/C/Manx/: ReadMe  ReadMe.info
MUI/Developer/C/Manx/lib/: mui.lib
MUI/Developer/Docs/: MUIdev.guide  MUIdev.guide.info  Policies.info  ReadMe.mui.info
MUI/Developer/ExtClasses/: MCC_Tron.info  ReadMe.info
MUI/Developer/FD/: muiclass_lib.fd
(+4 files in other folders)
